# core

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  justfile  rustfmt.toml  settings.yaml
crates/: justfile
crates/primitives/: cargo.toml
crates/primitives/src/: device.rs  lib.rs
crates/primitives/src/asset/: asset.rs  asset_id.rs  asset_type.rs  mod.rs
crates/primitives/src/chain/: chain.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20260106065654_add_devices.sql
crates/storage/src/: builder.rs  device.rs  error.rs  lib.rs  mod.rs  pool.rs
juvy/: Cargo.toml  justfile  uniffi.toml
juvy/src/: lib.rs
juvycore/: Cargo.toml  justfile  uniffi.toml
juvycore/src/: Info.plist  Package.swift  lib.rs
juvycore/src/models/: asset.rs  mod.rs  types.rs
services/api/: Cargo.toml
services/api/src/: lib.rs  main.rs  server.rs  status.rs
services/api/src/devices/: mod.rs
xtask/: Cargo.toml
