[workspace]
resolver = "2"
members = ["juvycore", "xtask"]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
homepage = "https://juvy.me"
description = "JuvyCore Rust library"
repository = "https://github.com/juvyme/core"
documentation = "https://github.com/juvyme"
readme = "./README.md"
keywords = ["crypto", "messaging", "solana", "ethereum", "web3"]

[workspace.dependencies]
uniffi = { version = "0.30.0" }