[package]
name = "juvycore"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
primitives = { path = "../crates/primitives" }
strum.workspace = true
uniffi = { workspace = true }