[package]
name = "settings"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
storage = { workspace = true }

serde = { workspace = true }
config = { version = "0.15.16", features = ["yaml"] }
