[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
primitives = { workspace = true }

chrono = { workspace = true }
deadpool-postgres ={ version = "0.14.1", features = ["rt_tokio_1"]}
postgres-types = { version = "0.2.6", features = ["derive"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tracing ={ workspace = true}
