[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
serde ={ workspace = true }
serde_json ={ workspace = true }
tokio = { workspace = true }

actix-cors = "0.7.0"
actix-web = "4"
